# Envolees

./: .env.best.example  .env.challenge  .env.challenge.example  .env.example  .env.full.example  .env.funded  .env.funded.example  .env.multiverse.example  .env.secret.example  .env.universe.example  .gitignore  AUDIT_BIAIS.md  CHANGELOG_v0.2.0.md  README.md  codebase.md  codebase.sh  codebase.txt  diagnostic.py  diagnostic_cross.py  force_update.sh  instruments_gft.txt  main.py  pyproject.toml
envolees/: __init__.py  alerts.py  cli.py  compare.py  config.py  prefilter.py  profiles.py  secrets.py  split.py
envolees/backtest/: __init__.py  engine.py  position.py  prop_sim.py
envolees/data/: __init__.py  aliases.py  cache.py  calendar.py  ftmo_instruments.py  resample.py  yahoo.py
envolees/indicators/: __init__.py  atr.py  donchian.py  ema.py
envolees/output/: __init__.py  compare.py  export.py  scoring.py
envolees/strategy/: __init__.py  base.py  donchian_breakout.py
systemd/: README.md  envolees-cache-daily.timer  envolees-cache.service  envolees-cache.timer  envolees-heartbeat.service  envolees-heartbeat.timer  envolees-monthly.service  envolees-monthly.timer  envolees-research.service  envolees-research.timer  envolees-validation-weekly.timer  envolees-validation.service  envolees-validation.timer
tests/: __init__.py  test_envolees.py
